--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ function load_alfaGTAtest2()
 }
 function load_alfaGTAtest3()
 {
-    document.write(commons+GTA('gta100')+MIRA('c-code'));
+    document.write(commons+GTA('gta100')+GTA('gta100_2')+MIRA('c-code')+'<script>mira_finished();</scr'+'ipt>');
 }
 function load_alfaGTAtest4()
 {
