--- a/index.html
+++ b/index.html
@@ -112,17 +112,9 @@ function load_alfaGTAtest()
 {
     document.write(commons+GTA('alfaGTATest')+MIRA('c-code'));
 }
-function load_alfaGTAtest2()
-{
-    document.write(commons+GTA('alfaGTATest'));
-}
 function load_alfaGTAtest3()
 {
     document.write(commons+GTA('gta100')+GTA('gta100_2')+MIRA('c-code')+'<script>mira_finished();</scr'+'ipt>');
-}
-function load_alfaGTAtest4()
-{
-    document.write(commons+GTA('gta100'));
 }
 function load_netcat()
 {
@@ -133,9 +125,7 @@ function load_netcat()
 <a href="#" onclick="load_mira(); return false">MIRA</a>
 <a href="#" onclick="load_netcat(); return false">NETCAT</a>
 <p>GTA tests by <a href="https://twitter.com/alfamodzz">@AlFaMoDzZ</a></p>
-<a href="#" onclick="load_alfaGTAtest(); return false">[1.27] GTA TEST 1</a>
-<a href="#" onclick="load_alfaGTAtest2(); return false">[1.27] GTA TEST 2</a><br><br>
-<a href="#" onclick="load_alfaGTAtest3(); return false">[1.00] GTA TEST 1</a>
-<a href="#" onclick="load_alfaGTAtest4(); return false">[1.00] GTA TEST 2</a>
+<a href="#" onclick="load_alfaGTAtest(); return false">[1.27] GTA TEST (not working)</a>
+<a href="#" onclick="load_alfaGTAtest3(); return false">[1.00] GTA TEST</a>
 </body>
 </html>
