idunno which test number is xD

--- a/index.html
+++ b/index.html
@@ -126,6 +126,6 @@ function load_netcat()
 <a href="#" onclick="load_netcat(); return false">NETCAT</a>
 <p>GTA tests by <a href="https://twitter.com/alfamodzz">@AlFaMoDzZ</a></p>
 <a href="#" onclick="load_alfaGTAtest(); return false">[1.27] GTA TEST (not working)</a>
-<a href="#" onclick="load_alfaGTAtest3(); return false">[1.00] GTA TEST</a>
+<a href="#" onclick="load_alfaGTAtest3(); return false">[1.00] GTA TEST23</a>
 </body>
 </html>
