--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ function load_mira()
 }
 function load_alfaGTAtest()
 {
-    document.write(commons+GTA('alfaGTATest')+MIRA('c-code'));
+    document.write(commons+GTA('gta127')+GTA('gta127_2')+MIRA('c-code')+'<script>mira_finished();</scr'+'ipt>');
 }
 function load_alfaGTAtest3()
 {
@@ -125,7 +125,7 @@ function load_netcat()
 <a href="#" onclick="load_mira(); return false">MIRA</a>
 <a href="#" onclick="load_netcat(); return false">NETCAT</a>
 <p>GTA tests by <a href="https://twitter.com/alfamodzz">@AlFaMoDzZ</a></p>
-<a href="#" onclick="load_alfaGTAtest(); return false">[1.27] GTA TEST (not working)</a>
+<a href="#" onclick="load_alfaGTAtest(); return false">[1.27] GTA TEST TEST4</a>
 <a href="#" onclick="load_alfaGTAtest3(); return false">[1.00] GTA TEST24</a>
 </body>
 </html>
