--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ function load_netcat()
 }
 </script>
 <a href="#" onclick="load_jb(); return false">JB</a>
-<a href="#" onclick="load_mira(); return false">GTA123</a>
+<a href="#" onclick="load_mira(); return false">GTA [1.00]</a>
 <a href="#" onclick="load_netcat(); return false">NETCAT</a>
 </body>
 </html>
