--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <title>shit</title>
 </head>
 <body>
- <a href="gtashit/index.html">gta tests</a> 
- <br/>
+ <h1>PS4 Exploits</h1>
  <a href="672-chendo/index.html">chendo 672</a> 
  <br/>
 </body>
