--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 <title>shit</title>
 </head>
 <body>
- <h1>PS4 Exploits</h1>
- <a href="672-chendo/index.html">chendo 672</a> 
- <br/>
+<h1 style="text-align: center;"><span style="text-decoration: underline;"><em><strong>PS4 Exploits</strong></em></span></h1>
+<table style="margin-left: auto; margin-right: auto;">
+<tbody>
+<tr>
+<td><a href="672-chendo/index.html">Chendo 6.72 exploit</a></td>
+</tr>
+</tbody>
+</table>
 </body>
 </html>
