--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>shit</title>
+<title>PS4 Exploits</title>
 </head>
 <body>
 <h1 style="text-align: center;"><span style="text-decoration: underline;"><em><strong>PS4 Exploits</strong></em></span></h1>
