--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
+<html><head>
 <title>PS4 Exploits</title>
 </head>
-<body>
-<h1 style="text-align: center;"><span style="text-decoration: underline;"><em><strong>PS4 Exploits</strong></em></span></h1>
-<table style="margin-left: auto; margin-right: auto;">
+<body style="background-color:#050505;">
+<h1 style="color: white;text-align: center;"><span style="text-decoration: underline;"><em><strong>PS4 Exploits</strong></em></span></h1>
+<table style="margin-left: auto;margin-right: auto;color: orange;">
 <tbody>
 <tr>
 <td><a href="672-chendo/index.html">Chendo 6.72 exploit</a></td>
 </tr>
 </tbody>
 </table>
-</body>
-</html>
+</body></html>
